k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymlog-staging
  namespace: colossus-gymlog-staging
  labels:
    app: gymlog-staging
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gymlog-staging
  template:
    metadata:
      labels:
        app: gymlog-staging
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/gymlog-staging:latest
          imagePullPolicy: Always
