k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymlog-staging
  namespace: colossus-gymlog-staging
  labels:
    app: gymlog-staging
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: gymlog-staging
  ports:
    - port: 80
      targetPort: 80
